--- a/index.html
+++ b/index.html
@@ -1,21 +1,55 @@
-<html>
-    <head>
-        <title>
-            Olá, eu sou a cabeça.
-        </title>
-    </head>
-    <body>
-        <h1>h1 Eu sou o corpo.</h1>
-        <h2>h2 Eu sou o corpo.</h2>
-    </body>
-    <ol>
-        <li>Café</li>
-        <li>Chá</li>
-        <li>Leite</li>
-    </ol>
-    <ul>
-        <li>Café</li>
-        <li>Chá</li>
-        <li>Leite</li>
-    </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eduardo Duarte CV</title>
+
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile">
+                    <img class="profile-image src="img/profile-image.jpg" alt="Profile image">
+                    <p class="name">Eduardo Duarte</p>
+                    <p class="profession">Product Owner</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contact</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 11 99999999</li>
+                        <li><i class="fa fa-envelope"></i>email@gmail.com</li>
+                        <li><i class="fa fa-globe"></i>www.linkedin.com</li>
+                        <li><i class="fa fa-phone"></i>serraduarte</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>English (Fluent), Portuguese(Native), Spanish(Basic)</p></li>
+                        <li><p>HTML, CSS, Git & GitHub</p></li>
+                        <li><p>C, C++, Python</p></li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">About me</div>
+                    <p class="about-me-contents">
+                         Olá, sou o Eduardo.<br>
+                         <br>Um pouco mais sobre o que faço.
+                         <br>Quais são minhas competências.
+                    </p>
+                </section>
+            </div>
+        </section>       
+    </main>
+
+</body>
 </html>
