--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="left-section">
             <section class="left-section-content">
                 <div class="profile">
-                    <img class="profile-image src="img/profile-image.jpg" alt="Profile image">
+                    <img class="profile-image" src="img/profile-image.jpg" alt="Profile image">
                     <p class="name">Eduardo Duarte</p>
                     <p class="profession">Product Owner</p>
                 </div>
@@ -48,6 +48,36 @@
                     </p>
                 </section>
             </div>
+
+            <section class="experience gap">
+                <div class="right-title">Experience</div>
+                <div class="experience-contents">
+                    
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-period">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Product Owner</p>
+                        <p class="exp-desc">
+                            Descreva aqui as principais atividades da empresa 01.
+                        </p>
+                    </div>
+
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2020-2021</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Product Owner</p>
+                        <p class="exp-desc">
+                            Descreva aqui as principais atividades da empresa 02.
+                        </p>
+                    </div>
+
+                </div>
+            </section>
+
         </section>       
     </main>
 
