feature: add education (#4)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="left-section">
             <section class="left-section-content">
                 <div class="profile">
-                    <img class="profile-image" src="img/profile-image.jpg" alt="Profile image">
+                    <img class="profile-image" src="img/profile-image.png" alt="Profile image">
                     <p class="name">Eduardo Duarte</p>
                     <p class="profession">Product Owner</p>
                 </div>
@@ -48,7 +48,6 @@
                     </p>
                 </section>
             </div>
-
             <section class="experience gap">
                 <div class="right-title">Experience</div>
                 <div class="experience-contents">
@@ -73,6 +72,31 @@
                         <p class="exp-desc">
                             Descreva aqui as principais atividades da empresa 02.
                         </p>
+                    </div>
+
+                </div>
+            </section>
+
+            <section class="education gap">
+                <div class="right-title">Education</div>
+                <div class="experience-contents">
+                    
+                    <div class="education-left">
+                        <p class="education-school-name">PUC Minas</p>
+                        <p class="education-time-period">2021-2022</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Project Management</p>
+                        <p class="education-desc">MBA Project Management</p>
+                    </div>
+                    
+                    <div class="education-left">
+                        <p class="education-school-name">UFMG</p>
+                        <p class="education-time-period">2009-2016</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Electrical Engineering</p>
+                        <p class="education-desc">B.Sc Electrical Engineering</p>
                     </div>
 
                 </div>
