--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eduardo Duarte CV</title>
 
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -101,6 +110,30 @@
 
                 </div>
             </section>
+
+            <section class="awards gap">
+                <div class="right-title">Certifications</div>
+                <div class="awards-contents">
+
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">Outubro 2022</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Jornada DEV</p>
+                        <p class="awards-desc">Descrição do curso Jornada DEV.</p>
+                    </div>
+                    
+                    <div class="awards-left">
+                        <p class="awards-company-name">Handmade Design</p>
+                        <p class="awards-time-period">Outubro 2018</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Design Thinking</p>
+                        <p class="awards-desc">Descrição do curso de Design Thinking.</p>
+                    </div>
+
+                </div>
 
         </section>       
     </main>
